force-app/main/default/objects/Cancellation_Refund__c/Cancellation_Refund__c.object-meta.xml
<CustomObject>
    <label>Cancellation</label>
    <nameField>
        <displayFormat>CAN-{0000}</displayFormat>
        <label>Cancellation Refund Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Cancellation Refunds</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>