force-app/main/default/objects/Cancellation_Refund__c/fields/AddOn__c.field-meta.xml
<CustomField>
    <fullName>AddOn__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>AddOn</label>
    <referenceTo>AddOn__c</referenceTo>
    <relationshipName>Cancellation_Refunds</relationshipName>
    <type>Lookup</type>
</CustomField>