force-app/main/default/objects/Cancellation_Refund__c/fields/Coupon_Name_Formula__c.field-meta.xml
<CustomField>
    <fullName>Coupon_Name_Formula__c</fullName>
    <formula>Orders__r.Account__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Coupon Name Formula</label>
    <type>Text</type>
</CustomField>