force-app/main/default/objects/Cancellation_Refund__c/fields/CS_Refund_Rejection_Reason__c.field-meta.xml
<CustomField>
    <fullName>CS_Refund_Rejection_Reason__c</fullName>
    <label>CS Refund Rejection Reason</label>
    <type>TextArea</type>
</CustomField>