force-app/main/default/objects/Cancellation_Refund__c/fields/Finance_Refund_Rejection_Reason__c.field-meta.xml
<CustomField>
    <fullName>Finance_Refund_Rejection_Reason__c</fullName>
    <label>Finance Refund Rejection Reason</label>
    <type>TextArea</type>
</CustomField>