force-app/main/default/objects/Cancellation_Refund__c/fields/Orders__c.field-meta.xml
<CustomField>
    <fullName>Orders__c</fullName>
    <label>Orders</label>
    <referenceTo>Orders__c</referenceTo>
    <relationshipLabel>Cancellation</relationshipLabel>
    <relationshipName>Cancellation_Refunds</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>