force-app/main/default/objects/Cancellation_Refund__c/fields/Refund_Amount_c__c.field-meta.xml
<CustomField>
    <fullName>Refund_Amount_c__c</fullName>
    <label>Refund Amount</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>