force-app/main/default/objects/Cancellation_Refund__c/fields/Refund_Type__c.field-meta.xml
<CustomField>
    <fullName>Refund_Type__c</fullName>
    <label>Refund Type</label>
    <length>200</length>
    <type>Text</type>
</CustomField>